--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -23,6 +23,7 @@ jobs:
     - name: Build and push Docker images
       uses: docker/build-push-action@v2.6.1
       with:
+        context: .
         tags: |
           ghcr.io/beryju/beryju.org:latest,
           ghcr.io/beryju/beryju.org:auto-${{ steps.time.outputs.time }}
