add go-get support in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,14 +31,29 @@ http {
         listen       80;
         listen  [::]:80;
         server_name  localhost;
+        root   /usr/share/nginx/html;
 
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
 
         error_page  404              /404.html;
+
+        location ~ ^/(.*) {
+            if ($args = "go-get=1") {
+                add_header Content-Type text/html;
+                return 200 '<meta name="go-import" content="$host/$1 git https://github.com/BeryJu/$1.git">';
+            }
+        }
+
+        location ~ ^/(.*)$ {
+            if ($args = "go-get=1") {
+                add_header Content-Type text/html;
+                return 200 '<meta name="go-import" content="$host/$1 git https://github.com/BeryJu/$1.git">';
+            }
+        }
+
     }
 }
