--- a/netlify.toml
+++ b/netlify.toml
@@ -21,3 +21,15 @@ HUGO_VERSION = "0.87.0"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+  from = "/v2/*"
+  to = "https://ghcr.io/v2/beryju/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/v2"
+  to = "https://ghcr.io/v2"
+  status = 200
+  force = true
