use artifactory proxy

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,13 +23,13 @@ HUGO_VERSION = "0.87.0"
 HUGO_ENABLEGITINFO = "true"
 
 [[redirects]]
-  from = "/v2/*"
-  to = "https://ghcr.io/v2/beryju/:splat"
+  from = "/v2/"
+  to = "https://ghcr.registry.beryju.org/v2/"
   status = 200
   force = true
 
 [[redirects]]
-  from = "/v2"
-  to = "https://ghcr.io/v2"
+  from = "/v2/*"
+  to = "https://ghcr.registry.beryju.org/v2/beryju/:splat"
   status = 200
   force = true
