--- a/netlify.toml
+++ b/netlify.toml
@@ -40,7 +40,7 @@ HUGO_ENABLEGITINFO = "true"
 #   force = true
 
 [[redirects]]
-  from = "/v2"
+  from = "/v2/*"
   to = "https://beryjuorg.netlify.app/.netlify/functions/docker-v2"
   status = 200
   force = true
@@ -51,8 +51,8 @@ HUGO_ENABLEGITINFO = "true"
   status = 200
   force = true
 
-[[redirects]]
-  from = "/v2/*"
-  to = "https://ghcr.io/v2/beryju/:splat"
-  status = 200
-  force = true
+# [[redirects]]
+#   from = "/v2/*"
+#   to = "https://ghcr.io/v2/beryju/:splat"
+#   status = 200
+#   force = true
