--- a/netlify.toml
+++ b/netlify.toml
@@ -40,19 +40,9 @@ HUGO_ENABLEGITINFO = "true"
 # End
 
 [[redirects]]
-  from = "/v2/*"
+  from = "/v2"
   to = "https://beryjuorg.netlify.app/.netlify/functions/docker-v2"
-  status = 200
-  force = true
 
-# [[redirects]]
-#   from = "/v2/_token"
-#   to = "https://beryjuorg.netlify.app/.netlify/functions/docker-v2-token"
-#   status = 200
-#   force = true
-
-# [[redirects]]
-#   from = "/v2/*"
-#   to = "https://ghcr.io/v2/beryju/:splat"
-#   status = 200
-#   force = true
+[[redirects]]
+  from = "/v2/*"
+  to = "https://ghcr.io/v2/beryju/:splat"
