--- a/netlify.toml
+++ b/netlify.toml
@@ -42,7 +42,11 @@ HUGO_ENABLEGITINFO = "true"
 [[redirects]]
   from = "/v2"
   to = "https://beryjuorg.netlify.app/.netlify/functions/docker-v2"
+  status = 200
+  force = true
 
 [[redirects]]
   from = "/v2/*"
   to = "https://ghcr.io/v2/beryju/:splat"
+  status = 200
+  force = true
