--- a/netlify.toml
+++ b/netlify.toml
@@ -26,6 +26,13 @@ HUGO_VERSION = "0.87.0"
 HUGO_ENABLEGITINFO = "true"
 
 [[redirects]]
+  from = "/*"
+  to = "https://beryjuorg.netlify.app/.netlify/functions/go-get"
+  status = 200
+  force = true
+  query = {go-get = "1"}
+
+[[redirects]]
   from = "/v2"
   to = "https://beryjuorg.netlify.app/.netlify/functions/oci-proxy"
   status = 200
