Revert "test scarf"
This reverts commit 3eb8ecf719576ac765fa101cce46fcb7ee0e22ba.

--- a/netlify.toml
+++ b/netlify.toml
@@ -32,15 +32,15 @@ HUGO_ENABLEGITINFO = "true"
   force = true
   query = {go-get = "1"}
 
-# [[redirects]]
-#   from = "/v2"
-#   to = "https://beryjuorg.netlify.app/.netlify/functions/oci-proxy"
-#   status = 200
-#   force = true
+[[redirects]]
+  from = "/v2"
+  to = "https://beryjuorg.netlify.app/.netlify/functions/oci-proxy"
+  status = 200
+  force = true
 
 [[redirects]]
   from = "/v2/*"
-  to = "https://beryju.docker.scarf.sh/v2/beryju/:splat"
+  to = "https://ghcr.io/v2/beryju/:splat"
   status = 200
   force = true
 
