--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,6 @@
 baseURL = "https://beryju.io"
 languageCode = "en-us"
 title = "BeryJu.io"
-theme = "hello-friend"
 disqusShortname = "beryju"
 paginate = 5
 enableGitInfo = true
@@ -9,6 +8,12 @@ enableGitInfo = true
 [author]
 name = "Jens Langhammer"
 email = "jens@beryju.org"
+
+[module]
+  proxy = "direct"
+  [[module.imports]]
+    path = "github.com/panr/hugo-theme-hello-friend"
+    disable = false
 
 [params]
   contentTypeName = "blog"
